# monitoring

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  __init__.py  adapter_core_utils.py  analyze_emails.py  analyze_imports.py  apply_new_structure.py  bot_menu.py  check_bdb.py  check_bot_status.py  check_email_processing.py  check_email_status.py  check_extension.py  check_extensions_config.py  check_imports.py  check_monitor_core.py  check_settings.py  check_structure.sh  check_system.py  compatibility.py  complete_migration.py  config.py  config_template.py  config_template_simple.py  core_utils.py  create_db_table.py  create_final_cleanup_diff.py  debug_callbacks.py  debug_config.py  delete_core_utils.py  delete_monitor_core.py  diagnose_settings.py  email_processor.py  final_test_monitor_core.py  (+43 more)
.githooks/: pre-commit
.github/workflows/: ci.yml  token-scan.yml
android-client/: gradle.properties  settings.gradle.kts
android-client/app/: build.gradle.kts
app/: __init__.py
app/bot/: __init__.py  callbacks.py  debug_menu.py  handlers.py  menus.py
app/config/: config.py  debug.py  debug_config.py  manager.py  settings.py  settings_manager.py
app/core/: __init__.py  alerting.py  checker.py  monitoring.py
app/extensions/: extension_manager.py  mail_monitor.py  server_checks.py  utils.py  web_interface.py
app/extensions/backup_monitor/: backup_handlers.py  backup_utils.py  bot_handler.py
app/handlers/: callbacks.py  commands.py
app/modules/: __init__.py  availability.py  debug.py  morning_report.py  resources.py  targeted_checks.py
app/utils/: __init__.py  common.py  diagnostics.py  helpers.py  logging.py
bot/: __init__(из bot).py  __init__.py
bot/handlers/: __init__.py  base.py  callbacks.py  commands.py  extensions.py  settings_handlers.py  tls_cert_handlers.py  zfs_pool_free_space_handlers.py
bot/handlers/settings_handlers/: __init__.py  _legacy.py  auth.py  (+5 more)
bot/menu/: __init__.py  builder.py  handlers.py
bot/utils/: __init__.py  utils.py
checks/: check_database.py
config/: __init__.py  backup_config.example.py  db_settings.py  db_settings_app.py  debug.py  debug_app.py  settings.py  settings_app.py
core/: __init__.py  checker.py  config_manager.py  monitor.py  monitor_core.py  monitor_state.py  task_router.py
core/monitor/: __init__.py  alerts.py  availability.py  lifecycle.py  report.py  resource_checks.py
core/monitor_parts/: __init__.py  alerts.py  availability.py  lifecycle.py  report.py  resource_checks.py  telegram_handlers.py
docs/: android_client_connection_logging_plan.md  android_compact_ops_hub_plan.md  android_menu_telegram_parity_plan.md  android_mobile_app.md  android_ui_concepts.md  api_202020_project.md  api_202020_tls_plan.md  config_console_backup_monitor.md  matrix_bot_management.md  nas_transfer_monitor.md  server_backend_android_settings_get_instructions.md  tls_cert_monitor.md  web_interface_v1_patch_guide.md  zfs_data_flow.md
docs/backlog/: stage2_vertical_slice.md
docs/contracts/: error_mapping.md  external_bff_api.md
extensions/: __init__(из extensions).py  __init__.py  base.py  db_settings_server_checks.py  db_settings_web_interface.py  extension_manager.py  reports.py  resource_check.py  separate_checks.py  server_checks.py  server_list.py  settings_extension_manager.py  settings_server_checks.py  settings_utils.py  settings_web_interface.py  single_check.py  stats_collector.py  supplier_stock_files.py  tls_cert_monitor.py  utils.py  web_interface.py  zfs_free_space_monitor.py  zfs_pool_free_space.py
extensions/backup_monitor/: backup_handlers.py  backup_utils.py  bot_handler.py  db_settings_backup_monitor.py  exiland_handler.py  proxmox_handler.py  settings_backup_monitor.py
extensions/email_processor/: base_handler.py  core.py  routers.py
extensions/inventory_monitor/: email_handler.py  file_handler.py
extensions/server_checks/: __init__.py  db_settings.py  settings.py
extensions/web_interface/: __init__.py  db_settings.py  settings.py
extensions/zfs_monitor/: zfs_handler.py
lib/: __init__.py  alerts.py  common.py  helpers.py  logging.py  matrix_commands.py  monitoring_utils.py  network.py  tamtam_bot.py  utils.py
logs/: debug.log.1
modules/: __init__.py  availability.py  debug.py  improved_mail_monitor.py  mail_monitor.py  morning_report.py  resources.py  targeted_checks.py  targeted_resources.py
modules/mail_parts/: __init__.py  patterns.py  processor.py
scripts/: android_post_pull_build_run.ps1  android_post_pull_build_run.sh  android_studio_pull_recover.ps1  auth_token_probe.sh  backup_server_configs_local.sh  bump_version.py  check-telegram-tokens.sh  check_imports.py  copy_configs.conf.example  copy_configs_ssh.sh  export_codex_changes.ps1  generate_mobile_default_token.py  git_safe_pull.ps1  move_and_clear_backups.sh  publish_android_prerelease.ps1  recover_local_branch.ps1  resolve_merge_conflicts.ps1  resolve_pr_conflicts.ps1  restore_backup.sh  setup_matrix_bot.py  simple_test.py  test_new_structure_v2.py  transfer_backup_to_nas.sh
src/: __init__.py  improved_mail_monitor.py  monitor_core.py  settings_handlers.py
src/bot/: __init__.py
src/config/: __init__.py  db_settings.py  db_settings_app.py  debug.py  debug_app.py  settings.py  settings_app.py
src/core/: __init__.py  checker.py  config_manager.py  monitor.py  task_router.py
src/extensions/: __init__.py  base.py  extension_manager.py  settings_extension_manager.py  settings_utils.py  utils.py
src/lib/: __init__.py  alerts.py  common.py  helpers.py  logging.py  network.py  utils.py
src/modules/: __init__.py  availability.py  debug.py  mail_monitor.py  morning_report.py  resources.py  targeted_checks.py  targeted_resources.py
src/monitoring/: __init__.py  bot_menu.py  ettings_handlers.py  improved_mail_monitor.py  main.py  monitor_core.py
tests/: conftest.py  test_bump_version.py  test_config_console_grouping.py  test_imports.py  test_mail_parsers.py  test_mypy_strict_set.py  test_proxmox_server.py  test_resource_alerts.py  test_tls_cert_monitor.py
(+136 files in other folders)
